Closed Bug 180123 Opened 23 years ago Closed 23 years ago

[gtk2] crashes when resizing mail window with gtk2 build

Categories

(Core Graveyard :: Image: Painting, defect)

x86
Linux
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: blizzard, Assigned: blizzard)

References

Details

Attachments

(2 files)

People have been reporting crashes when resizing the mail window with gtk2 builds. Happens down in image handling.
Attachment #106214 - Attachment mime type: application/octet-stream → text/plain
Garrett says that it's done by moving the seperator between the header pane and the message pane.
Attached patch patchSplinter Review
Return an empty object instead of no object at all if there are no rects.
Attachment #106221 - Flags: review?(tor)
Attachment #106221 - Flags: review?(tor) → review+
Checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: