Bug #180123.  Crashes when resizing mail window with gtk2 build.  Make sure to always return something from nsRegionGTK::GetRects(), even if the list of rects is empty.  r=tor